added array of all the pictures with names.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
 
     <section>
-      <img src="bag.jpg" class="large">
-      <img src="cthulhu.jpg" class="medium">
-      <img src="water-can.jpg" class="small">
+      <img class="image1" src="#">
+      <img class="image2" src="#">
+      <img class="image3" src="#">
     </section>
 
     </div>
