random math done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     </div>
 
     <section>
-      <img class="image1" src="#">
-      <img class="image2" src="#">
-      <img class="image3" src="#">
+      <section id ="productPictures"></section>
     </section>
 
     </div>
