pictures randomly display in page

--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
       <a class="tab">About Us</a>
     </div>
 
-    <section>
-      <section id ="productPictures"></section>
-    </section>
+    <div id ="productPictures"></div>
 
     </div>
-
   <body>
 
   </body>
