3 random. non repeating pictures displaying properly

--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
       <h1 class="logo-text">Welcome to Bus Mall</h1>
     </div>
 
-    <div class="navbar">
-      <a class="tab">Home</a>
-      <a class="tab">About Us</a>
-    </div>
-
-    <div id ="productPictures"></div>
-
+    <div id ="productPictures">
+      <img src ="#" id ="left">
+      <img src ="#" id="center">
+      <img src ="#" id="right">
     </div>
   <body>
 
