all counters working, graph added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <title>Bus Mall Home</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  </head>
   </head>
 
+  <body>
     <div class="head-logo">
       <h1 class="logo-text">Welcome to Bus Mall</h1>
     </div>
@@ -14,7 +17,10 @@
       <img src ="#" id="center">
       <img src ="#" id="right">
     </div>
-  <body>
+
+
+    <canvas id="chart"></canvas>
+
 
   </body>
   <script src="app.js"></script>
