initial commit, graph added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="head-logo">
-      <h1 class="logo-text">Welcome to Bus Mall</h1>
+      <h1 class="logo-text">Welcome to Bus Mall, choose your favorite product 25 times!</h1>
     </div>
 
     <div id ="productPictures">
@@ -20,7 +20,6 @@
 
 
     <canvas id="chart"></canvas>
-
 
   </body>
   <script src="app.js"></script>
