totals math still not working

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <img src ="#" id="right">
     </div>
 
-
-    <canvas id="chart"></canvas>
+    <a href="charts.html">Chart Data</a>
 
   </body>
   <script src="app.js"></script>
