everything seems to be working properly, some css needed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <img src ="#" id="right">
     </div>
 
-    <a href="charts.html">Chart Data</a>
+    <div class ="hiddenChartsButton" id="chartsLink">
+      <a href="charts.html"><strong>Table</strong></a>
+    </div>
 
   </body>
   <script src="app.js"></script>
