--- a/charts.html
+++ b/charts.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Table</h1>
     <canvas id="chart"></canvas>
+    <a href="index.html">Return To Home</a>
 
   </body>
   <script src="charts.js"></script>
