button hover animations added

--- a/charts.html
+++ b/charts.html
@@ -10,8 +10,9 @@
   <body>
     <h1>Table</h1>
     <canvas id="chart"></canvas>
-    <a href="index.html">Return To Home</a>
-
+    <div class="returnLink">
+      <a href="index.html">Return To Home</a>
+    </div>
   </body>
   <script src="charts.js"></script>
 </html>
