--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="head-logo">
-      <h1 class="logo-text">Welcome to Bus Mall, choose your favorite product 25 times!</h1>
+      <h1 class="logo-text">Welcome to Bus Mall, choose your favorite product 25 times</h1>
     </div>
 
     <div id ="productPictures">
